Acrylic/theme.css
/* ... */
.theme-dark
    .scrollerThemed-2oenus.themedWithTrack-q8E3vB
    .scroller-2FKFPG::-webkit-scrollbar-thumb {
    background-color: #20222550;
}

.theme-dark .container-1D34oG {
    background-color: transparent;
}

.theme-dark .card-FDVird:before {
    background-color: #33363c90;
}

.theme-dark .codeRedemptionRedirect-1wVR4b {
    background-color: #2f313650;
    border-color: #20222550;
}

.theme-dark .pageWrapper-1PgVDX {
    background-color: transparent;
}

.tooltip-2QfLtc,
.container-3XJ8ns {
    background-color: rgb(43, 44, 46) !important;
}

.theme-light {
    --background-primary: transparent;
    --background-primary-alt: #ffffffff;
    --background-secondary: #f2f3f550;
    --background-secondary-chat: #f2f3f5a0;
    --background-secondary-alt: #ebedef00;
    --background-tertiary: #e3e5e860;
    --background-logo: #f2f3f5a0;
    --deprecated-card-bg: #f8f9f94c;
    --deprecated-store-bg: #f8f9f900;
    --background-attachments: #f6f6f640;
    --background-search-bar: #e3e5e8a0;
    --background-switcher: #f2f3f5a0;
    --background-chatbox: #e3e5e850;
    --background-lights-out: #fff;
    --text-lights-out: #202020;
    --background-titlebar: #202225af;
    --interactive-muted: #95999d;
}

/* Custom */
.theme-light {
    --background-modifier-hover: #e3e5e850;
    --interactive-muted: #6d6f789d !important;
}
/* Make everything light enough on black backgrounds */
.appMount-2yBXZl {
    background: var(--background-tertiary) !important;
}
/* Discord logo darker */
.theme-light .wordmarkWindows-2dq6rw {
    color: black !important;
}
/* DM list, make it darker than other elements */
.privateChannels-oVe7HL,
.sidebar-1tnWFu {
    /* background: var(--background-secondary) !important; */
    background: transparent !important;
}
.container-2cd8Mz {
    background: var(--background-secondary) !important;
}
/* Profile */
.theme-light .container-YkUktl {
    background: #e3e5e850 !important;
    /* border-top: 1px solid var(--back) !important; */
}
/* Member list */
.container-2o3qEW {
    background: transparent !important;
}
/* Chat */
.chatContent-3KubbW {
    background: var(--background-tertiary) !important;
}
/* Channel title */
.content-1jQy2l {
    border-top: 1px solid var(--background-secondary-alt) !important;
}
/* Scrollbar */
.theme-light {
    --scrollbar-auto-track: #e3e5e850;
}
/* Settings */
.contentRegion-3HkfJJ {
    background: var(--background-tertiary) !important;
}
/* Dropdown menus */
.popout-15UxD6 {
    background: #e3e5e8e7 !important;
}
/* Hover */
.card-2ART2V:before {
    background: var(--background-secondary) !important;
}
/* End of custom */

.theme-light
    .scrollerThemed-2oenus.themedWithTrack-q8E3vB
    .scroller-2FKFPG::-webkit-scrollbar-track-piece {
    background-color: transparent;
    border: 4px solid transparent;
}

.theme-light
    .scrollerThemed-2oenus.themedWithTrack-q8E3vB
    .scroller-2FKFPG::-webkit-scrollbar-thumb {
    border-color: transparent;
    background-color: #e3e5e850;
}

.theme-light .container-1D34oG {
    background-color: transparent;
}

.theme-light .card-FDVird:before {
    background-color: #f6f6f790;
}

.theme-light .codeRedemptionRedirect-1wVR4b {
    background-color: #f6f6f750;
    border-color: #dcddde50;
}

.theme-light .pageWrapper-1PgVDX {
    background-color: transparent;
}

.withFrame-haYltI {
    height: 18px;
    margin-top: 0;
    padding-top: 4px;
}

.platform-win .sidebar-2K8pFh {
    border-radius: 0;
    background-color: var(--background-primary);
}

#private-channels-2 {
    display: none;
}

.appMount-3lHmkl {
    background-color: transparent;
}

.app-2rEoOp {
    background-color: transparent;
}

.attachment-33OFj0 {
    background-color: var(--background-attachments) !important;
}

.header-2o-2hj {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.privateChannels-1nO12o {
    background-color: transparent;
}

.container-PNkimc {
    background-color: transparent;
}

.container-1r6BKw.themed-ANHk51 {
    background-color: var(--background-tertiary);
}

.members-1998pB .content-3YMskv {
    background-color: transparent !important;
}

.header-2V-4Sw {
    background-color: var(--background-tertiary);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.container-3w7J-x {
    background-color: var(--background-primary);
}

.wrapper-1Rf91z {
    background-color: var(--background-secondary);
}

.childWrapper-anI2G9 {
    background-color: var(--background-logo);
}

.searchBar-3dMhjb {
    background-color: var(--background-search-bar);
}

.searchBar-6Kv8R2 {
    background-color: var(--background-tertiary);
    -webkit-box-shadow: none;
    box-shadow: none;
}

.content-yTz4x3:before {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.tabBody-3YRQ8W:before {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.container-19hC9u:before {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.container-xm7Ad0:before {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.searchBar-6Kv8R2 .searchBarComponent-32dTOx {
    background-color: var(--background-search-bar);
}

.scroller-2TZvBN {
    background-color: transparent;
}

.scroller-2TZvBN:active,
.scroller-2TZvBN:focus {
    outline: 0;
    outline-style: none;
    outline-width: 0;
}

.quickswitcher-3JagVE {
    background-color: var(--background-switcher);
}

.wrapper-2aW0bm {
    background-color: var(--background-primary-alt);
}

.searchResultMessage-2VxO12.hit-NLlWXA {
    background-color: var(--background-primary-alt);
}

.scroller-zPkAnE {
    background-color: transparent;
}

.embedFull-2tM8-- {
    background-color: var(--background-attachments);
}

.messagesWrapper-3lZDfY {
    margin-bottom: 8px;
}

.panels-j1Uci_ {
    background-color: var(--background-tertiary);
}

.titleBar-AC4pGV {
    background-color: var(--background-titlebar);
}

.uploadArea-3QgLtW {
    background-color: var(--background-lights-out);
}

.backdropWithLayer-3_uhz4 {
    background-color: var(--background-lights-out) !important;
}
/* ... */

